--- a/notebook/detach_data_process.ipynb
+++ b/notebook/detach_data_process.ipynb
@@ -42590,6 +42590,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 120,
+   "id": "757d83a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def data_aug(data):\n",
+    "    slots = defaultdict(list)\n",
+    "    for idx, info_dict in data:\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab0a1afe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 118,
    "id": "6e745c4c",
    "metadata": {},
