add log and best model

--- a/notebook/detach_data_process.ipynb
+++ b/notebook/detach_data_process.ipynb
@@ -42591,7 +42591,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "757d83a5",
+   "id": "803b597b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42604,7 +42604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab0a1afe",
+   "id": "2b7005ad",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -42856,11 +42856,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 182,
    "id": "8976ed55",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "p = re.compile('(级.{0,7}风|风力)')\n",
+    "g = p.search(\"删除宁波前天的风变化表\")\n",
+    "bool(g)"
+   ]
   },
   {
    "cell_type": "code",
@@ -42932,7 +42948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e194bc8",
+   "id": "a6187765",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -42940,7 +42956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4edb4adf",
+   "id": "9f07b029",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -42948,7 +42964,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3f85054",
+   "id": "d8597898",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -42956,7 +42972,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78b8d8af",
+   "id": "e894bc48",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -42964,7 +42980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41dd325e",
+   "id": "9d405414",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -42972,7 +42988,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e40a6e71",
+   "id": "debb10ea",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -42980,7 +42996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a820f2a7",
+   "id": "6b568b25",
    "metadata": {},
    "outputs": [],
    "source": []
