--- a/notebook/detach_data_process.ipynb
+++ b/notebook/detach_data_process.ipynb
@@ -42590,21 +42590,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "803b597b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def data_aug(data):\n",
-    "    slots = defaultdict(list)\n",
-    "    for idx, info_dict in data:\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "2b7005ad",
+   "id": "a7816ed1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -42917,8 +42904,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def slot_aug(slots):\n",
-    "    pass"
+    "def slot_aug(data):\n",
+    "    slots_statistics = defaultdict(list)\n",
+    "    for idx, info_dict in data.items():\n",
+    "        slots = info_dict['slots']\n",
+    "        for k, v in slots:\n",
+    "            slots_statistics[k].append(v)\n",
+    "            \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "def ner_aug(data, candidate_set):\n",
+    "    data_aug = {}\n",
+    "    for idx, info_dict in data.items():\n",
+    "        "
    ]
   },
   {
@@ -42948,7 +42947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6187765",
+   "id": "a9222c55",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -42956,7 +42955,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f07b029",
+   "id": "6d3574bb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -42964,7 +42963,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8597898",
+   "id": "0563d33e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -42972,7 +42971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e894bc48",
+   "id": "5b3898cb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -42980,7 +42979,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d405414",
+   "id": "9dca4781",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -42988,15 +42987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "debb10ea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b568b25",
+   "id": "6e5700e4",
    "metadata": {},
    "outputs": [],
    "source": []
